# page

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  run_backend.cmd  run_backend.ps1  run_ci.ps1
backend/: pyproject.toml
backend/prompts/agents/: copywriting.md  page_planning.md  product_understanding.md  qa_review.md  (+2 more)
backend/src/: app.py  config.py
backend/tests/: conftest.py  test_11_agent_graph_contract.py  test_11_agent_node_contracts.py  test_agent_graph_contract.py  test_agent_run_api.py  test_agent_run_models.py  test_agent_state.py  test_ai_adapter.py  test_ai_api.py  test_ai_cost_policy.py  test_ai_edit_command_api.py  test_bulk_fact_parser.py  test_commerce_cut_quality.py  test_commerce_visual_cut_builder.py  test_compliance.py  test_copy_rewrite_preview.py  test_copy_rewrite_service.py  test_cors.py  test_detail_page_orchestrator.py  test_detail_page_orchestrator_remediation.py  test_detail_page_package_service.py  test_detail_page_scene_planner.py  test_detail_page_template_service.py  test_export_api.py  test_export_commerce_visual_cuts.py  test_export_history_api.py  test_export_image_asset_rendering.py  test_export_service.py  test_export_visual_background.py  test_export_visual_layout.py  test_exports.py  test_facts.py  test_figma_bridge_client.py  test_figma_design_payload_builder.py  test_figma_export_api.py  test_figma_export_job_service.py  test_figma_live_export_api.py  test_figma_mcp_adapter.py  test_figma_plugin_api.py  test_figma_plugin_ticket_service.py  (+69 more)
(+565 files in other folders)
