[project]
name = "sellform-backend"
version = "0.1.0"
description = "Sellform FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "redis>=5.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]
